tests/pass/tests_only_for_scanner/GreaterThanOrEqual.java
package pass.tests_only_for_scanner; 

public class GreaterThanOrEqual {
	public boolean greaterThanOrEqual(int x, int y) {
		return x >= y;
	}
}
