tests/fail/GreaterThanOrEqual.java
package fail;

import java.lang.System;
public class GreaterThanOrEqual {
	
	public static void main ( String [] args ) {
		System.out.println('a' >= 42);
	}
}
